Updating colour with root
- Added root in css for colours
- Attempted darkmode/light mode.. shit really
- Added smoother transitions

--- a/index.html
+++ b/index.html
@@ -6,10 +6,66 @@
   <title>JMCars - Drive Your Dream</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    .text-red-500 { color: #d51811 !important; }
-    .bg-red-600 { background-color: #d51811 !important; }
-    .hover\:bg-red-700:hover { background-color: #a2140d !important; }
-    .hover\:shadow-red-600:hover { box-shadow: 0 0 10px #d51811 !important; }
+    /* Define colors for light and dark themes */
+    :root {
+      --color-primary: #d51811;
+      --color-primary-hover: #a2140d;
+      --color-bg: #000000;
+      --color-text: #ffffff;
+      --color-text-muted: #aaaaaa;
+      --color-card-bg: #1f2937; /* gray-800 */
+      --color-card-text: #d1d5db; /* gray-400 */
+      --color-modal-bg: #ffffff;
+      --color-modal-text: #1f2937;
+    }
+    html[data-theme="light"] {
+      --color-primary: #b91c1c; /* red-700 */
+      --color-primary-hover: #7f1d1d;
+      --color-bg: #ffffff;
+      --color-text: #111827; /* gray-900 */
+      --color-text-muted: #4b5563; /* gray-600 */
+      --color-card-bg: #f3f4f6; /* gray-100 */
+      --color-card-text: #374151; /* gray-700 */
+      --color-modal-bg: #f9fafb; /* gray-50 */
+      --color-modal-text: #111827;
+    }
+
+    /* Use CSS variables for colors */
+    body {
+      background-color: var(--color-bg);
+      color: var(--color-text);
+    }
+
+    .bg-primary {
+      background-color: var(--color-primary) !important;
+    }
+    .hover\:bg-primary-hover:hover {
+      background-color: var(--color-primary-hover) !important;
+    }
+    .text-primary {
+      color: var(--color-primary) !important;
+    }
+    .text-muted {
+      color: var(--color-text-muted);
+    }
+    .bg-card {
+      background-color: var(--color-card-bg);
+    }
+    .text-card {
+      color: var(--color-card-text);
+    }
+    .modal-bg {
+      background-color: var(--color-modal-bg);
+      color: var(--color-modal-text);
+    }
+
+    /* Override your existing classes to use CSS vars */
+    .text-red-500 { color: var(--color-primary) !important; }
+    .bg-red-600 { background-color: var(--color-primary) !important; }
+    .hover\:bg-red-700:hover { background-color: var(--color-primary-hover) !important; }
+    .hover\:shadow-red-600:hover { box-shadow: 0 0 10px var(--color-primary) !important; }
+
+    /* Scrollbar hiding styles remain unchanged */
     .hide-scrollbar::-webkit-scrollbar {
       display: none;
     }
@@ -17,29 +73,43 @@
       -ms-overflow-style: none;  /* IE/Edge */
       scrollbar-width: none;     /* Firefox */
     }
+
+    /* Toggle button style */
+    #themeToggle {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      color: var(--color-text);
+      font-size: 1.5rem;
+      padding: 0.25rem 0.5rem;
+      transition: color 0.3s;
+    }
+    #themeToggle:hover {
+      color: var(--color-primary);
+    }
   </style>
 </head>
-<body class="bg-black text-white">
+<body class="bg-black text-white" style="background-color: var(--color-bg);">
 
     <!-- Header -->
-    <header class="bg-black shadow-lg p-4">
-    <div class="flex items-center justify-between max-w-6xl mx-auto">
+    <header class="bg-black shadow-lg p-4" style="background-color: var(--color-bg);">
+      <div class="flex items-center justify-between max-w-6xl mx-auto">
         <!-- Hamburger (mobile) -->
         <button id="menuToggle" class="md:hidden text-white text-3xl focus:outline-none">
-        &#9776;
+          &#9776;
         </button>
 
         <!-- Logo centered -->
         <div class="flex-1 flex justify-center">
-        <img src="images/logo.png" alt="JMCars Logo" class="h-36 w-auto">
+          <img src="images/logo.png" alt="JMCars Logo" class="h-36 w-auto">
         </div>
 
-        <!-- Placeholder for spacing on right side -->
-        <div class="w-8 md:hidden"></div>
-    </div>
+        <!-- Theme toggle button top right -->
+      </div>
+    </header>
 
   <!-- Cars -->
-  <section id="cars" class="py-16 bg-black px-6 opacity-0 translate-y-6 transition-all duration-1000 reveal-on-scroll">
+  <section id="cars" class="py-16 bg-black px-6 opacity-0 translate-y-6 transition-all reveal-on-scroll" style="background-color: var(--color-bg);">
     <h2 class="text-3xl font-bold text-center mb-10 text-[#d51811]">Featured Stock</h2>
     <div class="overflow-x-auto scroll-smooth snap-x snap-mandatory">
       <div class="flex space-x-6 max-w-full pb-4 h-[30rem]">
@@ -193,7 +263,7 @@
   </section>
 
     <!-- Contact Cards -->
-    <section class="reveal-on-scroll opacity-0 translate-y-4 transition-all duration-1000">
+    <section id="contact" class="reveal-on-scroll opacity-0 translate-y-4 transition-all" style="background-color: var(--color-bg);">
         <div class="grid grid-cols-2 sm:grid-cols-2 gap-2 mt-12 max-w-md mx-auto">
         <!-- Call Card -->
         <a href="tel:+441234567890" class="flex items-center bg-gray-900 hover:bg-gray-800 transition p-6 rounded-lg shadow-lg border border-gray-700">
@@ -220,7 +290,7 @@
 
         <!-- Trustpilot Section -->
         <div class="max-w-5xl mx-auto text-center">
-            <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#d51811]">Trusted by Hundreds of Happy Drivers</h2>
+            <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#d51811]" style="padding-top: 20px;">Trusted by Hundreds of Happy Drivers</h2>
             <p class="text-gray-400 mb-10 text-lg">Our commitment to quality and service is reflected in our reviews on Trustpilot.</p>
 
             <div class="flex flex-col sm:flex-row items-center justify-center gap-6">
@@ -247,7 +317,7 @@
     </section>
 
   <!-- Footer -->
-  <footer class="bg-black text-white py-6">
+  <footer class="bg-black text-white py-6" style="background-color: var(--color-bg);">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-between px-6 text-sm">
       <p>&copy; 2025 JMCars. All rights reserved.</p>
       <div class="flex space-x-4 mt-2 md:mt-0">
@@ -324,6 +394,30 @@
       modal3.classList.add('hidden');
     }
   });
+
+  // dark / light mode
+    const themeToggleBtn = document.getElementById('themeToggle');
+  const html = document.documentElement;
+
+  function updateToggleIcon() {
+    themeToggleBtn.textContent = html.getAttribute('data-theme') === 'dark' ? '☀️' : '🌙';
+  }
+
+  themeToggleBtn.addEventListener('click', () => {
+    if (html.getAttribute('data-theme') === 'dark') {
+      html.setAttribute('data-theme', 'light');
+      localStorage.setItem('theme', 'light');
+    } else {
+      html.setAttribute('data-theme', 'dark');
+      localStorage.setItem('theme', 'dark');
+    }
+    updateToggleIcon();
+  });
+
+  // On page load, read saved theme or default to dark
+  const savedTheme = localStorage.getItem('theme') || 'dark';
+  html.setAttribute('data-theme', savedTheme);
+  updateToggleIcon();
 </script>
 </body>
 </html>
